--- a/page_12.html
+++ b/page_12.html
@@ -1,195 +1,218 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Resultados Modelo 1 - Estratégias de Release</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .chart-container {
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .bar {
-            fill: #19747E;
-            transition: all 0.3s ease;
-        }
-        .bar:hover {
-            fill: #0D4C56;
-        }
-        .axis text {
-            font-size: 12px;
-            fill: #333333;
-        }
-        .axis path, .axis line {
-            stroke: #666666;
-        }
-        .note-box {
-            background-color: rgba(25, 116, 126, 0.1);
-            border-left: 4px solid #19747E;
-        }
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resultados Detalhados - Modelo 1 Releases</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      .chart-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+      }
+
+      .axis text {
+        font-size: 14px;
+        fill: #555;
+        font-family: "Open Sans", sans-serif;
+      }
+      .axis path,
+      .axis line {
+        stroke: #cbd5e1;
+      }
+
+      .bar-label {
+        font-weight: bold;
+        fill: #19747e;
+        font-size: 16px;
+      }
     </style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col">
-<!-- Header -->
-<div class="mb-6">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Resultados Modelo 1 - Estratégias de Release</h1>
-<h2 class="text-2xl text-center text-gray-700 mb-4">Classificação por Texto (BAAI/bge-reranker-v2-m3)</h2>
-</div>
-<!-- Note about the model -->
-<div class="note-box p-3 mb-6 rounded-r-lg">
-<div class="flex items-center">
-<i class="fas fa-info-circle text-xl text-gray-600 mr-3"></i>
-<p class="text-lg"><span class="font-semibold">Nota:</span> Este modelo usa logits negativos (quanto mais próximo de 0, melhor).</p>
-</div>
-</div>
-<!-- Chart and explanation -->
-<div class="flex flex-grow">
-<!-- Chart -->
-<div class="chart-container p-4 flex-grow">
-<div id="chart"></div>
-</div>
-<!-- Explanation -->
-<div class="w-1/3 pl-6 flex flex-col justify-center">
-<div class="bg-white bg-opacity-80 p-4 rounded-lg shadow-sm">
-<h3 class="text-xl font-semibold mb-3">Análise dos Resultados</h3>
-<div class="mb-4 flex items-start">
-<i class="fas fa-trophy text-yellow-500 mr-2 mt-1"></i>
-<div>
-<p class="font-semibold">1º Lugar: Rolling Release</p>
-<p class="text-sm">-4.6328 (mais próximo de 0)</p>
-</div>
-</div>
-<div class="mb-4 flex items-start">
-<i class="fas fa-medal text-gray-400 mr-2 mt-1"></i>
-<div>
-<p class="font-semibold">2º Lugar: Semantic Versioning</p>
-<p class="text-sm">-4.6797</p>
-</div>
-</div>
-<div class="mb-4 flex items-start">
-<i class="fas fa-award text-amber-600 mr-2 mt-1"></i>
-<div>
-<p class="font-semibold">3º Lugar: Ad-hoc Release</p>
-<p class="text-sm">-5.5703</p>
-</div>
-</div>
-<div class="flex items-start">
-<i class="fas fa-last-place text-red-400 mr-2 mt-1"></i>
-<div>
-<p class="font-semibold">4º Lugar: Release Train</p>
-<p class="text-sm">-6.9180</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Footer with page number -->
-<div class="mt-6 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">12/24</div>
-</div>
-</div>
-<script>
-        // Data for the chart
-        const data = [
-            { strategy: "Rolling Release", score: -4.6328 },
-            { strategy: "Semantic Versioning", score: -4.6797 },
-            { strategy: "Ad-hoc Release", score: -5.5703 },
-            { strategy: "Release Train", score: -6.9180 }
-        ];
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-6">
+      <h1
+        class="text-4xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+      >
+        Resultados: Modelo 1 (Releases)
+      </h1>
+      <div class="flex items-center gap-4">
+        <div class="w-24 h-2 bg-teal-600 rounded-full"></div>
+        <span
+          class="text-sm font-semibold text-gray-500 bg-white px-2 py-1 rounded shadow-sm"
+        >
+          BAAI/bge-reranker-v2-m3
+        </span>
+      </div>
+      <p class="text-gray-500 mt-2 text-sm">
+        Métrica: Logits Negativos (Quanto mais próximo de 0, maior a
+        similaridade)
+      </p>
+    </div>
 
-        // Sort data by score (ascending, since lower negative values are better)
-        data.sort((a, b) => a.score - b.score);
+    <div class="flex gap-8 h-full pb-8">
+      <div class="w-3/4 glass-panel p-6">
+        <div id="chart" class="chart-container"></div>
+      </div>
 
-        // Set up the chart dimensions
-        const margin = { top: 30, right: 30, bottom: 70, left: 150 };
-        const width = 600 - margin.left - margin.right;
-        const height = 300 - margin.top - margin.bottom;
+      <div class="w-1/4 flex flex-col gap-4">
+        <div
+          class="glass-panel p-6 bg-yellow-50/50 border-l-4 border-yellow-500 justify-center"
+        >
+          <h3 class="text-xl font-bold text-yellow-800 mb-2">
+            <i class="fas fa-random mr-2"></i>Empate Técnico
+          </h3>
+          <p class="text-gray-700 text-sm leading-relaxed">
+            Disputa acirrada entre <strong>Rolling Release</strong> (-4.63) e
+            <strong>Semantic Versioning</strong> (-4.67).
+          </p>
+          <div class="mt-2 text-xs text-gray-500">
+            O modelo confundiu a alta frequência de commits (Rolling) com a
+            presença de tags v1.x (SemVer).
+          </div>
+        </div>
 
-        // Create the SVG container
-        const svg = d3.select("#chart")
-            .append("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform", `translate(${margin.left},${margin.top})`);
+        <div
+          class="glass-panel p-6 bg-teal-50/50 border-l-4 border-teal-600 justify-center"
+        >
+          <h3 class="text-xl font-bold text-teal-800 mb-2">
+            <i class="fas fa-eye mr-2"></i>Ponto Cego
+          </h3>
+          <p class="text-gray-700 text-sm leading-relaxed">
+            O <strong>Release Train</strong> (verdadeiro) ficou em último lugar
+            (-6.91).
+          </p>
+          <div class="mt-2 text-xs text-gray-500">
+            A análise textual falhou em detectar a "coordenação" temporal das
+            entregas.
+          </div>
+        </div>
+      </div>
+    </div>
 
-        // Create the X scale
-        const x = d3.scaleLinear()
-            .domain([0, -7])
-            .range([0, width]);
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      12
+    </div>
 
-        // Add X axis
-        svg.append("g")
-            .attr("class", "axis")
-            .attr("transform", `translate(0,${height})`)
-            .call(d3.axisBottom(x).ticks(7))
-            .append("text")
-            .attr("fill", "#000")
-            .attr("x", width / 2)
-            .attr("y", 40)
-            .attr("text-anchor", "middle")
-            .text("Score (Logits Negativos)");
+    <script>
+      // Dados do PDF
+      const data = [
+        { strategy: "Rolling Release", score: -4.6328, color: "#ef4444" }, // Vermelho (Erro)
+        { strategy: "Semantic Versioning", score: -4.6797, color: "#3b82f6" }, // Azul (Técnica correta, mas não estratégia)
+        { strategy: "Ad-hoc Release", score: -5.5703, color: "#cbd5e1" },
+        { strategy: "Release Train", score: -6.918, color: "#19747E" }, // Teal (Realidade - subestimada)
+      ];
 
-        // Create the Y scale
-        const y = d3.scaleBand()
-            .domain(data.map(d => d.strategy))
-            .range([0, height])
-            .padding(0.3);
+      // Configuração D3
+      const margin = { top: 20, right: 100, bottom: 40, left: 180 };
+      const width = 860 - margin.left - margin.right;
+      const height = 480 - margin.top - margin.bottom;
 
-        // Add Y axis
-        svg.append("g")
-            .attr("class", "axis")
-            .call(d3.axisLeft(y))
-            .append("text")
-            .attr("fill", "#000")
-            .attr("transform", "rotate(-90)")
-            .attr("y", -120)
-            .attr("x", -height / 2)
-            .attr("text-anchor", "middle")
-            .text("Estratégia de Release");
+      const svg = d3
+        .select("#chart")
+        .append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform", `translate(${margin.left},${margin.top})`);
 
-        // Add the bars
-        svg.selectAll(".bar")
-            .data(data)
-            .enter()
-            .append("rect")
-            .attr("class", "bar")
-            .attr("y", d => y(d.strategy))
-            .attr("height", y.bandwidth())
-            .attr("x", 0)
-            .attr("width", d => x(d.score))
-            .attr("rx", 4)
-            .attr("ry", 4);
+      // Escalas (Domínio ajustado para visualizar melhor a diferença entre -4 e -7)
+      const x = d3
+        .scaleLinear()
+        .domain([-8, -3]) // Foco na faixa relevante
+        .range([0, width]);
 
-        // Add labels to the bars
-        svg.selectAll(".label")
-            .data(data)
-            .enter()
-            .append("text")
-            .attr("class", "label")
-            .attr("x", d => x(d.score) + 5)
-            .attr("y", d => y(d.strategy) + y.bandwidth() / 2)
-            .attr("dy", "0.35em")
-            .text(d => d.score)
-            .attr("font-size", "12px")
-            .attr("fill", "#333333");
+      const y = d3
+        .scaleBand()
+        .range([0, height])
+        .domain(data.map((d) => d.strategy))
+        .padding(0.3);
+
+      // Eixo X
+      svg
+        .append("g")
+        .attr("transform", `translate(0,${height})`)
+        .call(d3.axisBottom(x))
+        .attr("class", "axis");
+
+      // Eixo Y
+      svg.append("g").call(d3.axisLeft(y)).attr("class", "axis");
+
+      // Linhas de Grade
+      svg
+        .append("g")
+        .attr("transform", `translate(0,${height})`)
+        .call(d3.axisBottom(x).tickSize(-height).tickFormat("").ticks(5))
+        .style("stroke-dasharray", "3,3")
+        .style("stroke-opacity", 0.1);
+
+      // Barras
+      svg
+        .selectAll("myRect")
+        .data(data)
+        .join("rect")
+        .attr("x", 0) // Início visual da barra (relativo ao range)
+        .attr("y", (d) => y(d.strategy))
+        // Como os valores são negativos e x(0) está fora, usamos a largura relativa ao mínimo do domínio
+        .attr("width", (d) => x(d.score))
+        .attr("height", y.bandwidth())
+        .attr("fill", (d) => d.color)
+        .attr("rx", 6)
+        .attr("opacity", 0.9);
+
+      // Labels de Valor
+      svg
+        .selectAll("myLabels")
+        .data(data)
+        .join("text")
+        .attr("class", "bar-label")
+        .attr("x", (d) => x(d.score) + 10)
+        .attr("y", (d) => y(d.strategy) + y.bandwidth() / 2 + 5)
+        .text((d) => d.score.toFixed(4))
+        .attr("fill", (d) => d.color);
     </script>
-
-</body></html>
+  </body>
+</html>
