--- a/page_2.html
+++ b/page_2.html
@@ -1,129 +1,219 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Equipe e Identificação</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-        }
-        .team-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 12px;
-        }
-        .team-member {
-            background-color: rgba(255, 255, 255, 0.7);
-            border-left: 4px solid #19747E;
-            transition: all 0.3s ease;
-        }
-        .team-member:hover {
-            transform: translateX(5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-    </style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col">
-<!-- Header -->
-<div class="mb-6">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Equipe e Identificação</h1>
-<h2 class="text-2xl text-center text-gray-700 mb-4">Engenharia de Software II - UFS</h2>
-</div>
-<!-- Advisor Section -->
-<div class="flex items-center justify-center mb-8 bg-white bg-opacity-70 p-4 rounded-lg shadow-sm">
-<i class="fas fa-user-tie text-2xl text-gray-600 mr-3"></i>
-<div>
-<p class="text-xl font-semibold">Orientador:</p>
-<p class="text-lg">Prof. Glauco de Figueiredo Carneiro</p>
-</div>
-</div>
-<!-- Team Section -->
-<div class="flex-grow">
-<h3 class="text-2xl font-semibold text-center mb-4">Equipe 3</h3>
-<div class="team-grid mx-auto max-w-4xl">
-<!-- Team Member 1 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Ana Vitória de Almeida Bizo</p>
-<p class="text-sm text-gray-600">202200025401</p>
-</div>
-</div>
-<!-- Team Member 2 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Carlos Augusto Santos de Carvalho</p>
-<p class="text-sm text-gray-600">202200025448</p>
-</div>
-</div>
-<!-- Team Member 3 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Guilherme Lavrador Viana</p>
-<p class="text-sm text-gray-600">202200092450</p>
-</div>
-</div>
-<!-- Team Member 4 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Guilherme Menezes de Azevedo</p>
-<p class="text-sm text-gray-600">202200025804</p>
-</div>
-</div>
-<!-- Team Member 5 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">João Guilherme Alves</p>
-<p class="text-sm text-gray-600">202200014711</p>
-</div>
-</div>
-<!-- Team Member 6 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Ravi Ribeiro Proença</p>
-<p class="text-sm text-gray-600">202300061779</p>
-</div>
-</div>
-<!-- Team Member 7 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Ricardo Nabuco Sampaio Santana do Couto</p>
-<p class="text-sm text-gray-600">202300038903</p>
-</div>
-</div>
-<!-- Team Member 8 -->
-<div class="team-member p-3 flex items-center">
-<i class="fas fa-user-circle text-xl text-gray-600 mr-3"></i>
-<div>
-<p class="font-semibold">Uilson Alves dos Santos Neto</p>
-<p class="text-sm text-gray-600">201900115954</p>
-</div>
-</div>
-</div>
-</div>
-<!-- Footer with page number -->
-<div class="mt-6 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">2/24</div>
-</div>
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Equipe 3 - Integrantes</title>
 
-</body></html>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      /* Estilo do Cartão de Vidro */
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 20px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      .member-card {
+        transition: all 0.3s ease;
+        border-left: 3px solid transparent;
+      }
+
+      .member-card:hover {
+        background-color: rgba(25, 116, 126, 0.05);
+        border-left: 3px solid #19747e;
+        transform: translateX(5px);
+      }
+    </style>
+  </head>
+  <body class="p-10 flex items-center justify-center">
+    <div class="glass-panel w-full p-10">
+      <div
+        class="absolute top-0 left-0 w-full h-2 bg-gradient-to-r from-teal-700 to-teal-400"
+      ></div>
+
+      <div
+        class="mb-8 flex items-end justify-between border-b border-gray-200 pb-4"
+      >
+        <div>
+          <span
+            class="text-teal-600 font-bold uppercase tracking-widest text-sm"
+            >Engenharia de Software II</span
+          >
+          <h1
+            class="text-4xl font-extrabold font-montserrat text-gray-800 mt-1"
+          >
+            Equipe 03
+          </h1>
+        </div>
+        <div class="text-right">
+          <p class="text-gray-500 text-sm">Universidade Federal de Sergipe</p>
+        </div>
+      </div>
+
+      <div class="grid grid-cols-2 gap-x-12 gap-y-4 flex-grow content-center">
+        <div class="space-y-4">
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              AB
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Ana Vitória de Almeida Bizo
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202200025401</p>
+            </div>
+          </div>
+
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              CC
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Carlos Augusto S. de Carvalho
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202200025448</p>
+            </div>
+          </div>
+
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              GV
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Guilherme Lavrador Viana
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202200092450</p>
+            </div>
+          </div>
+
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              GM
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Guilherme Menezes de Azevedo
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202200025804</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="space-y-4">
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              JA
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                João Guilherme Alves
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202200014711</p>
+            </div>
+          </div>
+
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              RP
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Ravi Ribeiro Proença
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202300061779</p>
+            </div>
+          </div>
+
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              RN
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Ricardo Nabuco S. S. do Couto
+              </p>
+              <p class="text-sm text-gray-500 font-mono">202300038903</p>
+            </div>
+          </div>
+
+          <div class="member-card p-3 rounded flex items-center">
+            <div
+              class="w-10 h-10 rounded-full bg-teal-100 flex items-center justify-center text-teal-700 mr-4 font-bold"
+            >
+              UA
+            </div>
+            <div>
+              <p class="font-bold text-gray-800 text-lg">
+                Uilson Alves dos Santos Neto
+              </p>
+              <p class="text-sm text-gray-500 font-mono">201900115954</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-8 text-center border-t border-gray-200 pt-4">
+        <p class="text-gray-400 text-sm font-semibold">
+          Orientador: Prof. Glauco de Figueiredo Carneiro
+        </p>
+      </div>
+
+      <div
+        class="absolute bottom-6 right-8 text-gray-300 font-bold text-xl opacity-60"
+      >
+        02
+      </div>
+    </div>
+  </body>
+</html>
