--- a/page_11.html
+++ b/page_11.html
@@ -1,177 +1,237 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Resultados Modelo 1 - Estratégias de Branching</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;family=Open+Sans:wght@400;600&amp;display=swap" rel="stylesheet"/>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resultados Detalhados - Modelo 1 Branching</title>
 
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; overflow: hidden; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-            
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .bar {
-            transition: width 0.8s ease;
-        }
-        .table-row:nth-child(odd) {
-            background-color: rgba(255, 255, 255, 0.5);
-        }
-        .table-row:nth-child(even) {
-            background-color: rgba(209, 232, 226, 0.3);
-        }
-    
-html {
-    overflow: hidden;
-}</style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col" style=" overflow: hidden;">
-<!-- Header -->
-<div class="mb-5">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Resultados Modelo 1 - Estratégias de Branching</h1>
-<h2 class="text-xl text-center text-gray-700 mb-3">BAAI/bge-reranker-v2-m3</h2>
-</div>
-<!-- Explanation -->
-<div class="bg-white bg-opacity-70 p-4 rounded-lg shadow-sm mb-4">
-<div class="flex items-center">
-<i class="fas fa-info-circle text-2xl text-[#19747E] mr-3"></i>
-<p class="text-lg">Este modelo usa logits negativos para classificação. <span class="font-semibold">Quanto mais próximo de zero, melhor o score.</span></p>
-</div>
-</div>
-<!-- Visualization and Table Section -->
-<div class="flex flex-row space-x-8 flex-grow">
-<!-- Visualization -->
-<div class="w-1/2 bg-white bg-opacity-80 p-6 rounded-lg shadow-sm">
-<h3 class="text-xl font-semibold mb-3 text-gray-700">Visualização de Scores</h3>
-<div class="h-64" id="chart"></div>
-</div>
-<!-- Table -->
-<div class="w-1/2 bg-white bg-opacity-80 p-6 rounded-lg shadow-sm">
-<h3 class="text-xl font-semibold mb-3 text-gray-700">Ranking Detalhado</h3>
-<div class="overflow-hidden rounded-lg">
-<table class="w-full">
-<thead class="bg-[#19747E] text-white">
-<tr>
-<th class="py-2 px-4 text-left">Rank</th>
-<th class="py-2 px-4 text-left">Estratégia</th>
-<th class="py-2 px-4 text-left">Score</th>
-</tr>
-</thead>
-<tbody>
-<tr class="table-row">
-<td class="py-2 px-4 font-semibold">1</td>
-<td class="py-2 px-4">Gitflow</td>
-<td class="py-2 px-4">-3.5156</td>
-</tr>
-<tr class="table-row">
-<td class="py-2 px-4 font-semibold">2</td>
-<td class="py-2 px-4">GitLab Flow</td>
-<td class="py-2 px-4">-4.4922</td>
-</tr>
-<tr class="table-row">
-<td class="py-2 px-4 font-semibold">3</td>
-<td class="py-2 px-4">GitHub Flow</td>
-<td class="py-2 px-4">-5.0820</td>
-</tr>
-<tr class="table-row">
-<td class="py-2 px-4 font-semibold">4</td>
-<td class="py-2 px-4">Trunk-Based</td>
-<td class="py-2 px-4">-7.0039</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-</div>
-<!-- Footer with page number -->
-<div class="mt-4 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">11/24</div>
-</div>
-</div>
-<script>
-        // D3.js Horizontal Bar Chart
-        document.addEventListener('DOMContentLoaded', function() {
-            const data = [
-                { name: "Gitflow", score: -3.5156 },
-                { name: "GitLab Flow", score: -4.4922 },
-                { name: "GitHub Flow", score: -5.0820 },
-                { name: "Trunk-Based", score: -7.0039 }
-            ];
+    <script src="https://cdn.tailwindcss.com"></script>
 
-            // Sort data by score (closest to 0 is best)
-            data.sort((a, b) => b.score - a.score);
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
-            const margin = { top: 20, right: 20, bottom: 30, left: 120 };
-            const width = 500 - margin.left - margin.right;
-            const height = 220 - margin.top - margin.bottom;
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-            const svg = d3.select("#chart")
-                .append("svg")
-                .attr("width", width + margin.left + margin.right)
-                .attr("height", height + margin.top + margin.bottom)
-                .append("g")
-                .attr("transform", `translate(${margin.left},${margin.top})`);
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
-            // X scale
-            const x = d3.scaleLinear()
-                .domain([-8, 0])  // Negative range with 0 as best
-                .range([0, width]);
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
 
-            // Y scale
-            const y = d3.scaleBand()
-                .domain(data.map(d => d.name))
-                .range([0, height])
-                .padding(0.3);
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
 
-            // Add X axis
-            svg.append("g")
-                .attr("transform", `translate(0,${height})`)
-                .call(d3.axisBottom(x).ticks(5));
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-            // Add Y axis
-            svg.append("g")
-                .call(d3.axisLeft(y));
+      .chart-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+      }
 
-            // Add bars
-            svg.selectAll(".bar")
-                .data(data)
-                .enter()
-                .append("rect")
-                .attr("class", "bar")
-                .attr("x", 0)
-                .attr("y", d => y(d.name))
-                .attr("width", d => x(d.score))
-                .attr("height", y.bandwidth())
-                .attr("fill", "#19747E")
-                .attr("opacity", (d, i) => 0.9 - (i * 0.15));
+      .axis text {
+        font-size: 14px;
+        fill: #555;
+        font-family: "Open Sans", sans-serif;
+      }
+      .axis path,
+      .axis line {
+        stroke: #cbd5e1;
+      }
 
-            // Add labels
-            svg.selectAll(".label")
-                .data(data)
-                .enter()
-                .append("text")
-                .attr("class", "label")
-                .attr("x", d => x(d.score) - 35)
-                .attr("y", d => y(d.name) + y.bandwidth() / 2)
-                .attr("dy", ".35em")
-                .attr("text-anchor", "middle")
-                .text(d => d.score)
-                .attr("fill", "white")
-                .attr("font-size", "12px");
-        });
+      /* Tooltip customizado */
+      .bar-label {
+        font-weight: bold;
+        fill: #19747e;
+        font-size: 16px;
+      }
+      .bar-sublabel {
+        font-size: 12px;
+        fill: #888;
+      }
+    </style>
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-6">
+      <h1
+        class="text-4xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+      >
+        Resultados: Modelo 1 (Branching)
+      </h1>
+      <div class="flex items-center gap-4">
+        <div class="w-24 h-2 bg-teal-600 rounded-full"></div>
+        <span
+          class="text-sm font-semibold text-gray-500 bg-white px-2 py-1 rounded shadow-sm"
+        >
+          BAAI/bge-reranker-v2-m3
+        </span>
+      </div>
+      <p class="text-gray-500 mt-2 text-sm">
+        Métrica: Logits Negativos (Escala: quanto mais próximo de 0, maior a
+        similaridade)
+      </p>
+    </div>
+
+    <div class="flex gap-8 h-full pb-8">
+      <div class="w-3/4 glass-panel p-6">
+        <div id="chart" class="chart-container"></div>
+      </div>
+
+      <div class="w-1/4 flex flex-col gap-4">
+        <div
+          class="glass-panel p-6 bg-red-50/50 border-l-4 border-red-400 justify-center"
+        >
+          <h3 class="text-xl font-bold text-red-800 mb-2">
+            <i class="fas fa-exclamation-circle mr-2"></i>Alucinação
+          </h3>
+          <p class="text-gray-700 text-sm leading-relaxed">
+            O modelo apontou <strong>Gitflow</strong> como vencedor (-3.51).
+          </p>
+          <div
+            class="mt-4 p-3 bg-white rounded border border-red-100 text-xs text-gray-500"
+          >
+            Isso ocorre porque modelos baseados em texto literal confundem a
+            presença de muitos arquivos/pastas com a "complexidade" do Gitflow.
+          </div>
+        </div>
+
+        <div
+          class="glass-panel p-6 bg-teal-50/50 border-l-4 border-teal-600 justify-center"
+        >
+          <h3 class="text-xl font-bold text-teal-800 mb-2">
+            <i class="fas fa-search mr-2"></i>Realidade
+          </h3>
+          <p class="text-gray-700 text-sm leading-relaxed">
+            O <strong>GitHub Flow</strong> (verdadeiro) ficou apenas em 3º lugar
+            neste modelo, provando que a análise puramente textual é
+            insuficiente.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      11
+    </div>
+
+    <script>
+      // Dados do PDF (Slide 5)
+      const data = [
+        { strategy: "Gitflow", score: -3.5156, color: "#ef4444" }, // Vermelho (Erro)
+        { strategy: "GitLab Flow", score: -4.4922, color: "#cbd5e1" },
+        { strategy: "GitHub Flow", score: -5.082, color: "#19747E" }, // Teal (Correto, mas perdeu aqui)
+        { strategy: "Trunk-Based", score: -7.0039, color: "#cbd5e1" },
+      ];
+
+      // Configuração D3
+      const margin = { top: 20, right: 100, bottom: 40, left: 150 };
+      const width = 860 - margin.left - margin.right;
+      const height = 480 - margin.top - margin.bottom;
+
+      const svg = d3
+        .select("#chart")
+        .append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform", `translate(${margin.left},${margin.top})`);
+
+      // Escala X (Scores) - Invertida visualmente ou ajustada para exibir magnitude
+      // Como são negativos, o maior valor é o mais próximo de zero (-3.5).
+      // Vamos definir o domínio de -8 até 0 para ficar claro.
+      const x = d3.scaleLinear().domain([-8, 0]).range([0, width]);
+
+      // Escala Y (Categorias)
+      const y = d3
+        .scaleBand()
+        .range([0, height])
+        .domain(data.map((d) => d.strategy))
+        .padding(0.3);
+
+      // Eixo X
+      svg
+        .append("g")
+        .attr("transform", `translate(0,${height})`)
+        .call(d3.axisBottom(x))
+        .attr("class", "axis");
+
+      // Eixo Y
+      svg.append("g").call(d3.axisLeft(y)).attr("class", "axis");
+
+      // Linhas de Grade Vertical
+      svg
+        .append("g")
+        .attr("class", "grid")
+        .attr("transform", `translate(0,${height})`)
+        .call(d3.axisBottom(x).tickSize(-height).tickFormat(""))
+        .style("stroke-dasharray", "3,3")
+        .style("stroke-opacity", 0.1);
+
+      // Barras
+      svg
+        .selectAll("myRect")
+        .data(data)
+        .join("rect")
+        .attr("x", (d) => x(d.score)) // O retângulo começa onde termina o valor negativo? Não.
+        // Ajuste para D3 com valores negativos:
+        // Queremos que a barra vá do valor até 0? Ou do mínimo (-8) até o valor?
+        // Visualmente: barra cheia da esquerda para a direita representa "força".
+        // Aqui, -3.5 é mais forte que -7. Então a barra deve ser maior.
+        // Vamos desenhar do score até o zero? Não, melhor desenhar do inicio do gráfico (esquerda) até o ponto.
+        // Mas o eixo é negativo.
+        // Solução visual: x(d.score) retorna a posição pixel do valor. width - x(d.score) seria invertido.
+        // Vamos usar a lógica padrão: barra começa em 0? Não.
+        // Vamos fazer as barras começarem na esquerda (valor -8) e irem até o valor d.score.
+        .attr("x", 0)
+        .attr("y", (d) => y(d.strategy))
+        .attr("width", (d) => x(d.score))
+        .attr("height", y.bandwidth())
+        .attr("fill", (d) => d.color)
+        .attr("rx", 6)
+        .transition()
+        .duration(1000)
+        .attr("width", (d) => x(d.score));
+
+      // Labels de Valor
+      svg
+        .selectAll("myLabels")
+        .data(data)
+        .join("text")
+        .attr("class", "bar-label")
+        .attr("x", (d) => x(d.score) + 10) // Um pouco depois da barra
+        .attr("y", (d) => y(d.strategy) + y.bandwidth() / 2 + 5)
+        .text((d) => d.score.toFixed(4))
+        .attr("opacity", 0)
+        .transition()
+        .delay(800)
+        .duration(500)
+        .attr("opacity", 1);
     </script>
-
-</body></html>
+  </body>
+</html>
