--- a/page_15.html
+++ b/page_15.html
@@ -1,174 +1,225 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Resultados Modelo 3 - Estratégias de Branching</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; overflow: hidden; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E8 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .bar {
-            fill: #19747E;
-            transition: all 0.3s ease;
-        }
-        .bar:hover {
-            fill: #0D4C54;
-        }
-        .axis text {
-            font-size: 12px;
-            font-family: 'Open Sans', sans-serif;
-        }
-        .axis path, .axis line {
-            stroke: #333333;
-        }
-        .strategy-icon {
-            font-size: 1.5rem;
-            margin-right: 0.5rem;
-        }
-    
-html {
-    overflow: hidden;
-}</style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col" style=" overflow: hidden;">
-<!-- Header -->
-<div class="mb-4">
-<div class="header-line mb-3"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Resultados Modelo 3 - Estratégias de Branching</h1>
-<h2 class="text-xl text-center text-gray-700 mb-3">Zero-Shot Classification (mDeBERTa-v3-base-xnli)</h2>
-</div>
-<!-- Model Description -->
-<div class="bg-white bg-opacity-70 p-3 rounded-lg shadow-sm mb-4">
-<p class="text-lg"><i class="fas fa-info-circle text-gray-600 mr-2"></i> <span class="font-semibold">Nota:</span> Este modelo usa <span class="text-green-700 font-semibold">probabilidade semântica</span> (0 a 1). Quanto mais próximo de 1, melhor.</p>
-</div>
-<!-- Chart Container -->
-<div class="flex-grow flex flex-col items-center justify-center">
-<div class="w-full h-52" id="chart"></div>
-<!-- Strategy Icons Legend -->
-<div class="grid grid-cols-4 gap-4 mt-3 w-full px-10">
-<div class="flex items-center">
-<i class="fab fa-github strategy-icon text-gray-700"></i>
-<span>GitHub Flow</span>
-</div>
-<div class="flex items-center">
-<i class="fas fa-tree strategy-icon text-green-700"></i>
-<span>Trunk-Based</span>
-</div>
-<div class="flex items-center">
-<i class="fas fa-code-branch strategy-icon text-blue-700"></i>
-<span>Gitflow</span>
-</div>
-<div class="flex items-center">
-<i class="fas fa-code-branch strategy-icon text-purple-700"></i>
-<span>GitLab Flow</span>
-</div>
-</div>
-</div>
-<!-- Key Findings -->
-<div class="bg-white bg-opacity-70 p-3 rounded-lg shadow-sm mt-2">
-<h3 class="text-xl font-semibold mb-1">Principais Conclusões:</h3>
-<ul class="list-disc pl-5">
-<li class="mb-1">GitHub Flow foi classificado como a melhor estratégia com probabilidade de <span class="font-semibold">53,41%</span></li>
-<li class="mb-1">Trunk-Based Development foi o segundo melhor com probabilidade de <span class="font-semibold">28,28%</span></li>
-<li>As estratégias Gitflow e GitLab Flow tiveram resultados significativamente inferiores</li>
-</ul>
-</div>
-<!-- Footer with page number -->
-<div class="mt-3 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">15/24</div>
-</div>
-</div>
-<script>
-        // Data for the chart
-        const data = [
-            { strategy: "GitHub Flow", score: 0.5341, icon: "fab fa-github" },
-            { strategy: "Trunk-Based", score: 0.2828, icon: "fas fa-tree" },
-            { strategy: "Gitflow", score: 0.1507, icon: "fas fa-code-branch" },
-            { strategy: "GitLab Flow", score: 0.0867, icon: "fas fa-code-branch" }
-        ];
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resultados Detalhados - Modelo 3 Branching</title>
 
-        // Set up the chart dimensions
-        const margin = { top: 20, right: 20, bottom: 40, left: 50 };
-        const width = 800 - margin.left - margin.right;
-        const height = 200 - margin.top - margin.bottom;
+    <script src="https://cdn.tailwindcss.com"></script>
 
-        // Create the SVG container
-        const svg = d3.select("#chart")
-            .append("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform", `translate(${margin.left},${margin.top})`);
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
-        // Set up scales
-        const x = d3.scaleBand()
-            .domain(data.map(d => d.strategy))
-            .range([0, width])
-            .padding(0.3);
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-        const y = d3.scaleLinear()
-            .domain([0, 0.6])  // Max value is 0.5341, but giving some space at the top
-            .range([height, 0]);
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
-        // Add X axis
-        svg.append("g")
-            .attr("class", "axis")
-            .attr("transform", `translate(0,${height})`)
-            .call(d3.axisBottom(x));
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
 
-        // Add Y axis
-        svg.append("g")
-            .attr("class", "axis")
-            .call(d3.axisLeft(y).ticks(5).tickFormat(d => (d * 100) + "%"));
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
 
-        // Add Y axis label
-        svg.append("text")
-            .attr("transform", "rotate(-90)")
-            .attr("y", 0 - margin.left)
-            .attr("x", 0 - (height / 2))
-            .attr("dy", "1em")
-            .style("text-anchor", "middle")
-            .style("font-size", "12px")
-            .text("Probabilidade Semântica");
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-        // Add the bars
-        svg.selectAll(".bar")
-            .data(data)
-            .enter()
-            .append("rect")
-            .attr("class", "bar")
-            .attr("x", d => x(d.strategy))
-            .attr("width", x.bandwidth())
-            .attr("y", d => y(d.score))
-            .attr("height", d => height - y(d.score))
-            .attr("rx", 4)
-            .attr("ry", 4);
+      .chart-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+      }
 
-        // Add labels on top of bars
-        svg.selectAll(".label")
-            .data(data)
-            .enter()
-            .append("text")
-            .attr("class", "label")
-            .attr("x", d => x(d.strategy) + x.bandwidth() / 2)
-            .attr("y", d => y(d.score) - 5)
-            .attr("text-anchor", "middle")
-            .style("font-size", "12px")
-            .style("font-weight", "bold")
-            .text(d => (d.score * 100).toFixed(2) + "%");
+      .axis text {
+        font-size: 14px;
+        fill: #555;
+        font-family: "Open Sans", sans-serif;
+      }
+      .axis path,
+      .axis line {
+        stroke: #cbd5e1;
+      }
+
+      .bar-label {
+        font-weight: bold;
+        fill: #19747e;
+        font-size: 16px;
+      }
+    </style>
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-6">
+      <h1
+        class="text-4xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+      >
+        Resultados: Modelo 3 (Branching)
+      </h1>
+      <div class="flex items-center gap-4">
+        <div class="w-24 h-2 bg-teal-600 rounded-full"></div>
+        <span
+          class="text-sm font-semibold text-gray-500 bg-white px-2 py-1 rounded shadow-sm"
+        >
+          mDeBERTa-v3-base-xnli (Zero-Shot)
+        </span>
+      </div>
+      <p class="text-gray-500 mt-2 text-sm">
+        Métrica: Probabilidade Semântica (0 a 1). Quanto maior, melhor.
+      </p>
+    </div>
+
+    <div class="flex gap-8 h-full pb-8">
+      <div class="w-3/4 glass-panel p-6">
+        <div id="chart" class="chart-container"></div>
+      </div>
+
+      <div class="w-1/4 flex flex-col gap-4">
+        <div
+          class="glass-panel p-6 bg-purple-50/50 border-l-4 border-purple-500 justify-center"
+        >
+          <h3 class="text-xl font-bold text-purple-800 mb-2">
+            <i class="fas fa-check-circle mr-2"></i>Semântica
+          </h3>
+          <p class="text-gray-700 text-sm leading-relaxed">
+            <strong>GitHub Flow</strong> lidera com folga (53.4%).
+          </p>
+          <div class="mt-2 text-xs text-gray-500">
+            O modelo entendeu que a descrição "branches curtas e merge na
+            master" corresponde linguisticamente ao GitHub Flow.
+          </div>
+        </div>
+
+        <div
+          class="glass-panel p-6 bg-gray-50/50 border-l-4 border-gray-400 justify-center"
+        >
+          <h3 class="text-xl font-bold text-gray-700 mb-2">
+            <i class="fas fa-list-ol mr-2"></i>2º Lugar
+          </h3>
+          <p class="text-gray-600 text-sm leading-relaxed">
+            <strong>Trunk-Based</strong> (28.2%) superou o Gitflow.
+          </p>
+          <div class="mt-2 text-xs text-gray-400">
+            Isso reforça a natureza ágil do projeto, já que Trunk-Based é
+            semanticamente mais próximo do GitHub Flow do que o Gitflow.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      15
+    </div>
+
+    <script>
+      // Dados do PDF (Slide 7 - Branching Zero Shot)
+      const data = [
+        { strategy: "GitHub Flow", score: 0.5341, color: "#19747E" }, // Vencedor
+        { strategy: "Trunk-Based", score: 0.2828, color: "#cbd5e1" }, // Vice
+        { strategy: "Gitflow", score: 0.1507, color: "#cbd5e1" }, // Baixo
+        { strategy: "GitLab Flow", score: 0.0867, color: "#cbd5e1" }, // Muito baixo
+      ];
+
+      // Configuração D3
+      const margin = { top: 40, right: 60, bottom: 40, left: 160 };
+      const width = 860 - margin.left - margin.right;
+      const height = 480 - margin.top - margin.bottom;
+
+      const svg = d3
+        .select("#chart")
+        .append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+        .attr("transform", `translate(${margin.left},${margin.top})`);
+
+      // Escalas
+      const x = d3
+        .scaleLinear()
+        .domain([0, 0.6]) // Um pouco acima de 0.53 para dar espaço
+        .range([0, width]);
+
+      const y = d3
+        .scaleBand()
+        .range([0, height])
+        .domain(data.map((d) => d.strategy))
+        .padding(0.3);
+
+      // Eixo X
+      svg
+        .append("g")
+        .attr("transform", `translate(0,${height})`)
+        .call(
+          d3
+            .axisBottom(x)
+            .ticks(5)
+            .tickFormat((d) => d * 100 + "%")
+        )
+        .attr("class", "axis");
+
+      // Eixo Y
+      svg.append("g").call(d3.axisLeft(y)).attr("class", "axis");
+
+      // Linhas de Grade
+      svg
+        .append("g")
+        .attr("transform", `translate(0,${height})`)
+        .call(d3.axisBottom(x).tickSize(-height).tickFormat(""))
+        .style("stroke-dasharray", "3,3")
+        .style("stroke-opacity", 0.1);
+
+      // Barras
+      svg
+        .selectAll("myRect")
+        .data(data)
+        .join("rect")
+        .attr("x", x(0))
+        .attr("y", (d) => y(d.strategy))
+        .attr("width", 0) // Animação
+        .attr("height", y.bandwidth())
+        .attr("fill", (d) => d.color)
+        .attr("rx", 6)
+        .transition()
+        .duration(1200)
+        .attr("width", (d) => x(d.score));
+
+      // Labels de Valor
+      svg
+        .selectAll("myLabels")
+        .data(data)
+        .join("text")
+        .attr("class", "bar-label")
+        .attr("x", (d) => x(d.score) + 10)
+        .attr("y", (d) => y(d.strategy) + y.bandwidth() / 2 + 5)
+        .text((d) => (d.score * 100).toFixed(2) + "%")
+        .attr("opacity", 0)
+        .transition()
+        .delay(1000)
+        .duration(500)
+        .attr("opacity", 1);
     </script>
-
-</body></html>
+  </body>
+</html>
