--- a/page_17.html
+++ b/page_17.html
@@ -1,200 +1,202 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Comparativo Consolidado - Branching</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; overflow: hidden; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .comparison-table {
-            border-collapse: separate;
-            border-spacing: 0;
-        }
-        .comparison-table th, .comparison-table td {
-            border: 1px solid #ddd;
-            padding: 6px 10px;
-        }
-        .comparison-table th {
-            background-color: #19747E;
-            color: white;
-        }
-        .comparison-table tr:nth-child(even) {
-            background-color: rgba(255, 255, 255, 0.7);
-        }
-        .comparison-table tr:nth-child(odd) {
-            background-color: rgba(255, 255, 255, 0.4);
-        }
-        .highlight-github {
-            background-color: rgba(25, 116, 126, 0.2);
-            font-weight: bold;
-        }
-        .highlight-gitflow {
-            background-color: rgba(144, 238, 144, 0.2);
-            font-weight: bold;
-        }
-        .chart-container {
-            height: 150px;
-            width: 100%;
-        }
-    
-html {
-    overflow: hidden;
-}</style>
-</head>
-<body>
-<div class="slide p-6 flex flex-col" style=" overflow: hidden;">
-<!-- Header -->
-<div class="mb-4">
-<div class="header-line mb-3"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-1">Comparativo Consolidado - Branching</h1>
-</div>
-<!-- Main Content -->
-<div class="flex-grow">
-<!-- Comparison Table -->
-<table class="comparison-table w-full mb-4">
-<thead>
-<tr>
-<th class="text-left">Ranking</th>
-<th class="text-center">Modelo 1<br/><span class="text-sm font-normal">[-7.00; -3.51]</span></th>
-<th class="text-center">Modelo 2<br/><span class="text-sm font-normal">[0.61; 0.68]</span></th>
-<th class="text-center">Modelo 3<br/><span class="text-sm font-normal">[0.08; 0.53]</span></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="font-semibold">1º</td>
-<td class="text-center highlight-gitflow">Gitflow<br/><span class="text-red-600">-3.5156</span></td>
-<td class="text-center highlight-github">GitHub Flow<br/><span class="text-green-600">0.6881</span></td>
-<td class="text-center highlight-github">GitHub Flow<br/><span class="text-green-600">0.5341</span></td>
-</tr>
-<tr>
-<td class="font-semibold">2º</td>
-<td class="text-center">GitLab Flow<br/><span class="text-red-600">-4.4922</span></td>
-<td class="text-center">GitLab Flow<br/><span class="text-green-600">0.6808</span></td>
-<td class="text-center">Trunk-Based<br/><span class="text-green-600">0.2828</span></td>
-</tr>
-<tr>
-<td class="font-semibold">3º</td>
-<td class="text-center">GitHub Flow<br/><span class="text-red-600">-5.0820</span></td>
-<td class="text-center">Gitflow<br/><span class="text-green-600">0.6574</span></td>
-<td class="text-center">Gitflow<br/><span class="text-green-600">0.1507</span></td>
-</tr>
-<tr>
-<td class="font-semibold">4º</td>
-<td class="text-center">Trunk-Based<br/><span class="text-red-600">-7.0039</span></td>
-<td class="text-center">Trunk-Based<br/><span class="text-green-600">0.6162</span></td>
-<td class="text-center">GitLab Flow<br/><span class="text-green-600">0.0867</span></td>
-</tr>
-</tbody>
-</table>
-<!-- Analysis Section -->
-<div class="bg-white bg-opacity-70 p-3 rounded-lg shadow-sm">
-<h3 class="text-xl font-semibold mb-1 flex items-center">
-<i class="fas fa-chart-line text-gray-600 mr-2"></i>
-                    Análise Comparativa
-                </h3>
-<ul class="list-disc pl-6 space-y-1">
-<li><span class="font-semibold">Modelo 1 (BAAI)</span>: Gitflow teve o melhor score, mas foi considerado uma alucinação.</li>
-<li><span class="font-semibold">Modelos 2 e 3</span>: GitHub Flow venceu em todos os casos, alinhado à realidade do projeto.</li>
-<li><span class="font-semibold">Consolidação</span>: GitHub Flow aparece como a estratégia dominante nos modelos semânticos.</li>
-</ul>
-</div>
-</div>
-<!-- D3 Visualization -->
-<div class="chart-container mb-3" id="chart"></div>
-<!-- Footer with page number -->
-<div class="mt-1 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">17/24</div>
-</div>
-</div>
-<script>
-        // D3.js visualization
-        document.addEventListener('DOMContentLoaded', function() {
-            const data = [
-                {model: "Modelo 1 (BAAI)", strategy: "Gitflow", score: -3.5156, color: "#19747E"},
-                {model: "Modelo 1 (BAAI)", strategy: "GitLab Flow", score: -4.4922, color: "#19747E"},
-                {model: "Modelo 1 (BAAI)", strategy: "GitHub Flow", score: -5.0820, color: "#19747E"},
-                {model: "Modelo 1 (BAAI)", strategy: "Trunk-Based", score: -7.0039, color: "#19747E"},
-                {model: "Modelo 2 (Qwen)", strategy: "GitHub Flow", score: 0.6881, color: "#4CAF50"},
-                {model: "Modelo 2 (Qwen)", strategy: "GitLab Flow", score: 0.6808, color: "#4CAF50"},
-                {model: "Modelo 2 (Qwen)", strategy: "Gitflow", score: 0.6574, color: "#4CAF50"},
-                {model: "Modelo 2 (Qwen)", strategy: "Trunk-Based", score: 0.6162, color: "#4CAF50"},
-                {model: "Modelo 3 (mDeBERTa)", strategy: "GitHub Flow", score: 0.5341, color: "#2196F3"},
-                {model: "Modelo 3 (mDeBERTa)", strategy: "Trunk-Based", score: 0.2828, color: "#2196F3"},
-                {model: "Modelo 3 (mDeBERTa)", strategy: "Gitflow", score: 0.1507, color: "#2196F3"},
-                {model: "Modelo 3 (mDeBERTa)", strategy: "GitLab Flow", score: 0.0867, color: "#2196F3"}
-            ];
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Comparativo Consolidado - Branching</title>
 
-            const margin = {top: 15, right: 30, bottom: 30, left: 50};
-            const width = 1200 - margin.left - margin.right;
-            const height = 150 - margin.top - margin.bottom;
+    <script src="https://cdn.tailwindcss.com"></script>
 
-            const svg = d3.select("#chart")
-                .append("svg")
-                .attr("width", width + margin.left + margin.right)
-                .attr("height", height + margin.top + margin.bottom)
-                .append("g")
-                .attr("transform", `translate(${margin.left},${margin.top})`);
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
 
-            // X scale
-            const x = d3.scaleBand()
-                .domain(data.map(d => d.strategy))
-                .range([0, width])
-                .padding(0.2);
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-            // Y scale (handling both positive and negative values)
-            const y = d3.scaleLinear()
-                .domain([-8, 1])
-                .range([height, 0]);
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
 
-            // Add X axis
-            svg.append("g")
-                .attr("transform", `translate(0,${height})`)
-                .call(d3.axisBottom(x))
-                .selectAll("text")
-                .style("text-anchor", "end")
-                .attr("dx", "-.8em")
-                .attr("dy", ".15em")
-                .attr("transform", "rotate(-45)");
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        transition: transform 0.3s ease;
+      }
 
-            // Add Y axis
-            svg.append("g")
-                .call(d3.axisLeft(y));
+      .glass-panel:hover {
+        transform: translateY(-5px);
+      }
 
-            // Add bars
-            svg.selectAll("rect")
-                .data(data)
-                .join("rect")
-                .attr("x", d => x(d.strategy))
-                .attr("y", d => d.score < 0 ? y(0) : y(d.score))
-                .attr("width", x.bandwidth())
-                .attr("height", d => Math.abs(y(d.score) - y(0)))
-                .attr("fill", d => d.color)
-                .attr("opacity", 0.7);
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
 
-            // Add zero line
-            svg.append("line")
-                .attr("x1", 0)
-                .attr("x2", width)
-                .attr("y1", y(0))
-                .attr("y2", y(0))
-                .attr("stroke", "black")
-                .attr("stroke-width", 1)
-                .attr("stroke-dasharray", "2,2");
-        });
-    </script>
+      .truth-badge {
+        background: #19747e;
+        color: white;
+        padding: 5px 15px;
+        border-radius: 20px;
+        font-size: 0.9rem;
+        font-weight: bold;
+        display: inline-flex;
+        align-items: center;
+      }
 
-</body></html>
+      .result-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        height: 100%;
+        padding: 1.5rem;
+        border-top: 6px solid transparent;
+      }
+
+      .result-success {
+        border-top-color: #19747e;
+        background: linear-gradient(to bottom, #f0fdfa, white);
+      }
+      .result-error {
+        border-top-color: #ef4444;
+        background: linear-gradient(to bottom, #fef2f2, white);
+      }
+
+      .icon-circle {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+      }
+    </style>
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-8 flex justify-between items-end">
+      <div>
+        <h1
+          class="text-4xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+        >
+          Comparativo Consolidado: Branching
+        </h1>
+        <div class="w-32 h-2 bg-teal-600 rounded-full"></div>
+      </div>
+
+      <div class="truth-badge shadow-lg">
+        <i class="fas fa-check-double mr-2"></i>
+        Verdade Terrestre: GitHub Flow
+      </div>
+    </div>
+
+    <div class="grid grid-cols-3 gap-8 h-full pb-8">
+      <div class="glass-panel overflow-hidden">
+        <div class="result-card result-error">
+          <div
+            class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-2"
+          >
+            Modelo 1: Texto
+          </div>
+
+          <div class="icon-circle bg-red-100 text-red-600">
+            <i class="fas fa-times"></i>
+          </div>
+
+          <h3 class="text-2xl font-bold text-gray-800 mb-1">Gitflow</h3>
+          <p class="text-red-500 font-bold text-sm mb-4">Resultado Incorreto</p>
+
+          <div
+            class="mt-auto bg-white p-4 rounded-lg shadow-sm border border-red-100 text-sm text-gray-600"
+          >
+            <p>
+              <strong>Falha:</strong> O modelo "alucinou" devido à presença de
+              muitos arquivos e pastas, associando complexidade a Gitflow.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="glass-panel overflow-hidden">
+        <div class="result-card result-success">
+          <div
+            class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-2"
+          >
+            Modelo 2: Embeddings
+          </div>
+
+          <div class="icon-circle bg-teal-100 text-teal-600">
+            <i class="fas fa-check"></i>
+          </div>
+
+          <h3 class="text-2xl font-bold text-gray-800 mb-1">GitHub Flow</h3>
+          <p class="text-teal-600 font-bold text-sm mb-4">Resultado Correto</p>
+
+          <div
+            class="mt-auto bg-white p-4 rounded-lg shadow-sm border border-teal-100 text-sm text-gray-600"
+          >
+            <p>
+              <strong>Sucesso:</strong> Detectou a estrutura de PRs, mas com
+              margem muito apertada (diferença de 0.007) para o GitLab Flow.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="glass-panel overflow-hidden relative">
+        <div
+          class="absolute top-0 right-0 bg-yellow-400 text-white text-xs font-bold px-3 py-1 rounded-bl-lg shadow-sm"
+        >
+          <i class="fas fa-star mr-1"></i>Melhor Resultado
+        </div>
+
+        <div class="result-card result-success">
+          <div
+            class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-2"
+          >
+            Modelo 3: Zero-Shot
+          </div>
+
+          <div class="icon-circle bg-teal-600 text-white shadow-lg">
+            <i class="fas fa-brain"></i>
+          </div>
+
+          <h3 class="text-2xl font-bold text-gray-800 mb-1">GitHub Flow</h3>
+          <p class="text-teal-600 font-bold text-sm mb-4">Resultado Correto</p>
+
+          <div
+            class="mt-auto bg-white p-4 rounded-lg shadow-sm border border-teal-100 text-sm text-gray-600"
+          >
+            <p>
+              <strong>Vitória Clara:</strong> A análise semântica (NLI) entendeu
+              perfeitamente a lógica de "branches curtas e merge na master".
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      17
+    </div>
+  </body>
+</html>
