--- a/page_22.html
+++ b/page_22.html
@@ -1,116 +1,212 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Governança e Equilíbrio</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .balance-beam {
-            height: 8px;
-            background-color: #19747E;
-            border-radius: 4px;
-            position: relative;
-        }
-        .balance-pivot {
-            position: absolute;
-            bottom: -15px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 30px;
-            height: 30px;
-            background-color: #19747E;
-            border-radius: 50%;
-            border: 4px solid #D1E8E2;
-        }
-        .balance-item {
-            transition: all 0.3s ease;
-        }
-        .balance-item:hover {
-            transform: translateY(-5px);
-        }
-    </style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col">
-<!-- Header -->
-<div class="mb-6">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Governança e Equilíbrio</h1>
-</div>
-<!-- Balance Visualization -->
-<div class="flex justify-center items-center mb-10 relative">
-<div class="w-3/4 balance-beam">
-<div class="balance-pivot"></div>
-</div>
-</div>
-<!-- Balance Items -->
-<div class="flex justify-between mb-10">
-<!-- Development Speed -->
-<div class="w-1/3 px-4 balance-item">
-<div class="bg-white bg-opacity-80 rounded-lg p-6 shadow-md h-full">
-<div class="flex justify-center mb-4">
-<i class="fas fa-rocket text-5xl text-blue-500"></i>
-</div>
-<h3 class="text-xl font-bold text-center mb-3">Velocidade de Desenvolvimento</h3>
-<ul class="list-disc pl-5">
-<li class="mb-2">Integração contínua na master</li>
-<li class="mb-2">Pull requests rápidos</li>
-<li class="mb-2">Frequência alta de commits</li>
-</ul>
-</div>
-</div>
-<!-- Project Strategies -->
-<div class="w-1/3 px-4 balance-item">
-<div class="bg-white bg-opacity-80 rounded-lg p-6 shadow-md h-full">
-<div class="flex justify-center mb-4">
-<i class="fas fa-code-branch text-5xl text-green-600"></i>
-</div>
-<h3 class="text-xl font-bold text-center mb-3">Estratégias Adotadas</h3>
-<ul class="list-disc pl-5">
-<li class="mb-2">GitHub Flow para branching</li>
-<li class="mb-2">Release Train para releases</li>
-<li class="mb-2">Padronização de versionamento</li>
-</ul>
-</div>
-</div>
-<!-- Version Control -->
-<div class="w-1/3 px-4 balance-item">
-<div class="bg-white bg-opacity-80 rounded-lg p-6 shadow-md h-full">
-<div class="flex justify-center mb-4">
-<i class="fas fa-code-branch text-5xl text-purple-500"></i>
-</div>
-<h3 class="text-xl font-bold text-center mb-3">Controle de Versão</h3>
-<ul class="list-disc pl-5">
-<li class="mb-2">Tags claras para releases</li>
-<li class="mb-2">Milestones bem definidos</li>
-<li class="mb-2">Histórico de commits organizado</li>
-</ul>
-</div>
-</div>
-</div>
-<!-- Key Points -->
-<div class="bg-white bg-opacity-70 p-6 rounded-lg shadow-sm mb-6">
-<h3 class="text-xl font-bold mb-3">Equilíbrio Alcançado:</h3>
-<p class="text-lg">O projeto adota o GitHub Flow, que prioriza agilidade e integração contínua na master, rejeitando modelos puramente contínuos (Rolling) ou improvisados (Ad-hoc). A estratégia de Release Train proporciona entregas coordenadas e previsíveis, equilibrando a velocidade de desenvolvimento com a necessidade de padronização.</p>
-</div>
-<!-- Footer with page number -->
-<div class="mt-auto flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">22/24</div>
-</div>
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Governança e Equilíbrio</title>
 
-</body></html>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        border-radius: 20px;
+        box-shadow: 0 10px 40px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+        height: 100%;
+        transition: transform 0.3s ease;
+      }
+
+      .glass-panel:hover {
+        transform: translateY(-5px);
+      }
+
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      /* Linha da Balança */
+      .balance-line {
+        position: absolute;
+        top: 50%;
+        left: 10%;
+        right: 10%;
+        height: 6px;
+        background: #cbd5e1;
+        z-index: 0;
+        border-radius: 4px;
+      }
+
+      /* Triângulo do Pivô Central */
+      .pivot-point {
+        width: 0;
+        height: 0;
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        border-bottom: 35px solid #19747e;
+        margin-top: 10px;
+      }
+
+      .icon-circle {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+        color: white;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .feature-list li {
+        margin-bottom: 0.5rem;
+        display: flex;
+        align-items: flex-start;
+        font-size: 0.95rem;
+        color: #4b5563;
+      }
+      .feature-list i {
+        margin-top: 4px;
+        margin-right: 8px;
+      }
+    </style>
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-12 text-center">
+      <h1
+        class="text-4xl font-extrabold font-montserrat title-gradient mb-4 py-2 leading-tight"
+      >
+        Governança e Equilíbrio
+      </h1>
+      <p class="text-xl text-gray-600">
+        Como o projeto harmoniza a agilidade do desenvolvimento com a
+        estabilidade das entregas.
+      </p>
+    </div>
+
+    <div
+      class="flex-grow relative flex items-center justify-center gap-10 px-10"
+    >
+      <div
+        class="absolute top-1/2 left-20 right-20 h-2 bg-gray-300 -z-10 rounded-full transform -translate-y-16"
+      ></div>
+
+      <div class="w-1/3 h-80 z-10 pt-8 transform -translate-y-8">
+        <div class="glass-panel border-t-4 border-blue-500">
+          <div class="icon-circle bg-blue-500">
+            <i class="fas fa-rocket"></i>
+          </div>
+          <h3 class="text-xl font-bold text-gray-800 mb-4">Agilidade</h3>
+          <ul class="feature-list w-full">
+            <li>
+              <i class="fas fa-bolt text-blue-500"></i> Integração Contínua na
+              Master
+            </li>
+            <li>
+              <i class="fas fa-clock text-blue-500"></i> Pull Requests Rápidos
+            </li>
+            <li>
+              <i class="fas fa-sync-alt text-blue-500"></i> Alta Frequência de
+              Commits
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="w-1/4 h-96 z-20 flex flex-col items-center justify-center">
+        <div
+          class="glass-panel border-t-4 border-teal-600 shadow-2xl scale-110 bg-white"
+        >
+          <div class="icon-circle bg-teal-600">
+            <i class="fas fa-balance-scale"></i>
+          </div>
+          <h3 class="text-xl font-bold text-gray-800 mb-4">Estratégias</h3>
+          <ul class="feature-list w-full">
+            <li>
+              <i class="fas fa-check-circle text-teal-600"></i>
+              <strong>GitHub Flow</strong> (Branching)
+            </li>
+            <li>
+              <i class="fas fa-check-circle text-teal-600"></i>
+              <strong>Release Train</strong> (Release)
+            </li>
+            <li>
+              <i class="fas fa-check-circle text-teal-600"></i> Padronização
+              SemVer
+            </li>
+          </ul>
+        </div>
+        <div class="pivot-point"></div>
+      </div>
+
+      <div class="w-1/3 h-80 z-10 pt-8 transform -translate-y-8">
+        <div class="glass-panel border-t-4 border-purple-500">
+          <div class="icon-circle bg-purple-500">
+            <i class="fas fa-shield-alt"></i>
+          </div>
+          <h3 class="text-xl font-bold text-gray-800 mb-4">Controle</h3>
+          <ul class="feature-list w-full">
+            <li>
+              <i class="fas fa-tag text-purple-500"></i> Tags Claras (Releases)
+            </li>
+            <li>
+              <i class="fas fa-flag-checkered text-purple-500"></i> Milestones
+              Definidos
+            </li>
+            <li>
+              <i class="fas fa-history text-purple-500"></i> Histórico
+              Organizado
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="mt-8 bg-white/60 backdrop-blur-sm p-6 rounded-xl border border-teal-100 shadow-sm mx-20 text-center"
+    >
+      <p class="text-gray-700 text-lg">
+        <i class="fas fa-quote-left text-teal-600 mr-2 opacity-50"></i>
+        O <strong>GitHub Flow</strong> garante a velocidade diária, enquanto o
+        <strong>Release Train</strong> assegura a estabilidade mensal. Um modelo
+        híbrido eficiente.
+        <i class="fas fa-quote-right text-teal-600 ml-2 opacity-50"></i>
+      </p>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      22
+    </div>
+  </body>
+</html>
