--- a/page_4.html
+++ b/page_4.html
@@ -1,161 +1,231 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Relevância e Arquitetura do Projeto</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .content-box {
-            background-color: rgba(255, 255, 255, 0.7);
-            border-left: 4px solid #19747E;
-        }
-        .architecture-box {
-            position: relative;
-            height: 300px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .mono-repo {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            padding: 20px;
-        }
-        .repo-module {
-            position: absolute;
-            width: 120px;
-            height: 120px;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            font-weight: bold;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-    </style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col">
-<!-- Header -->
-<div class="mb-6">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Relevância e Arquitetura do Projeto</h1>
-</div>
-<!-- Main Content -->
-<div class="flex-grow flex">
-<!-- Relevance Section -->
-<div class="w-1/2 pr-6">
-<div class="content-box p-6 mb-6 h-full flex flex-col justify-center">
-<div class="flex items-center mb-6">
-<div class="bg-green-100 p-4 rounded-full mr-4">
-<i class="fas fa-chart-line text-3xl text-green-700"></i>
-</div>
-<h2 class="text-2xl font-bold text-gray-700">Relevância de Mercado</h2>
-</div>
-<ul class="space-y-4 text-lg">
-<li class="flex items-start">
-<i class="fas fa-check-circle text-green-600 mt-1 mr-3"></i>
-<span>Alta demanda de mercado por agents de IA sem código</span>
-</li>
-<li class="flex items-start">
-<i class="fas fa-check-circle text-green-600 mt-1 mr-3"></i>
-<span>Integração de LLMs (Large Language Models)</span>
-</li>
-<li class="flex items-start">
-<i class="fas fa-check-circle text-green-600 mt-1 mr-3"></i>
-<span>Solução &#34;all-in-one&#34; para Desktop e Docker</span>
-</li>
-<li class="flex items-start">
-<i class="fas fa-check-circle text-green-600 mt-1 mr-3"></i>
-<span>Permite conversar com documentos através de RAG</span>
-</li>
-</ul>
-</div>
-</div>
-<!-- Architecture Section -->
-<div class="w-1/2 pl-6">
-<div class="content-box p-6 h-full flex flex-col">
-<div class="flex items-center mb-4">
-<div class="bg-green-100 p-4 rounded-full mr-4">
-<i class="fas fa-code-branch text-3xl text-green-700"></i>
-</div>
-<h2 class="text-2xl font-bold text-gray-700">Arquitetura Monorepo</h2>
-</div>
-<div class="architecture-box flex-grow p-4">
-<div class="mono-repo">
-<!-- Central Node -->
-<div class="repo-module bg-green-600" style="left: 50%; top: 50%; transform: translate(-50%, -50%); width: 140px; height: 140px;">
-<i class="fas fa-code-branch text-3xl mb-2"></i>
-<span>Monorepo</span>
-<span class="text-xs mt-1">anything-llm</span>
-</div>
-<!-- Frontend Module -->
-<div class="repo-module bg-blue-500" style="left: 20%; top: 20%;">
-<i class="fas fa-desktop text-2xl mb-1"></i>
-<span>Frontend</span>
-<span class="text-xs">Interface</span>
-</div>
-<!-- Server Module -->
-<div class="repo-module bg-purple-500" style="left: 70%; top: 20%;">
-<i class="fas fa-server text-2xl mb-1"></i>
-<span>Server</span>
-<span class="text-xs">API</span>
-</div>
-<!-- Collector Module -->
-<div class="repo-module bg-yellow-500" style="left: 45%; top: 70%;">
-<i class="fas fa-download text-2xl mb-1"></i>
-<span>Collector</span>
-<span class="text-xs">Dados</span>
-</div>
-<!-- Connection Lines -->
-<svg height="100%" style="position: absolute; top: 0; left: 0; z-index: -1;" width="100%">
-<!-- Lines to Frontend -->
-<line stroke="#19747E" stroke-width="2" x1="50%" x2="20%" y1="50%" y2="20%"></line>
-<!-- Lines to Server -->
-<line stroke="#19747E" stroke-width="2" x1="50%" x2="70%" y1="50%" y2="20%"></line>
-<!-- Lines to Collector -->
-<line stroke="#19747E" stroke-width="2" x1="50%" x2="45%" y1="50%" y2="70%"></line>
-</svg>
-</div>
-</div>
-<div class="mt-4 text-center">
-<p class="text-lg font-semibold">Entrega de binários e contêineres</p>
-<div class="flex justify-center mt-2 space-x-4">
-<div class="flex items-center">
-<i class="fas fa-box text-gray-600 mr-2"></i>
-<span>Binários</span>
-</div>
-<div class="flex items-center">
-<i class="fas fa-cube text-gray-600 mr-2"></i>
-<span>Contêineres</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Footer with page number -->
-<div class="mt-6 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">4/24</div>
-</div>
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Relevância e Arquitetura</title>
 
-</body></html>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      /* Estilo Base dos Painéis */
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+      }
+
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      /* Estilos do Diagrama */
+      .repo-node {
+        position: absolute;
+        width: 110px;
+        height: 110px;
+        border-radius: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-weight: bold;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+        z-index: 10;
+        /* CORREÇÃO 1: Centralização absoluta base */
+        transform: translate(-50%, -50%);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      /* CORREÇÃO 2: Hover mantém a centralização e aplica escala */
+      .repo-node:hover {
+        transform: translate(-50%, -50%) scale(1.1);
+        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
+      }
+
+      /* Posições exatas alinhadas com o SVG */
+      .mod-center {
+        top: 50%;
+        left: 50%;
+        width: 140px;
+        height: 140px;
+        z-index: 20;
+        background: #19747e;
+      }
+      .mod-front {
+        top: 25%;
+        left: 25%;
+        background: #4299e1;
+      }
+      .mod-server {
+        top: 25%;
+        left: 75%;
+        background: #9f7aea;
+      }
+      .mod-data {
+        top: 75%;
+        left: 50%;
+        background: #ed8936;
+      }
+
+      .line-svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        pointer-events: none;
+      }
+    </style>
+  </head>
+  <body class="p-12 flex flex-col relative">
+    <div class="mb-8">
+      <h1
+        class="text-5xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+      >
+        Arquitetura & Relevância
+      </h1>
+      <div class="w-24 h-2 bg-teal-600 rounded-full"></div>
+    </div>
+
+    <div class="flex gap-8 h-full pb-8">
+      <div class="w-1/3 flex flex-col gap-6">
+        <div
+          class="glass-panel p-8 border-l-4 border-teal-600 flex flex-col justify-center"
+        >
+          <h3 class="text-2xl font-bold text-gray-800 mb-4 font-montserrat">
+            <i class="fas fa-layer-group mr-2 text-teal-600"></i>
+            Estrutura Monorepo
+          </h3>
+          <p class="text-gray-700 text-lg leading-relaxed">
+            O repositório unifica múltiplos componentes vitais (Frontend,
+            Server, Collector) na mesma raiz, exigindo uma estratégia de
+            versionamento coesa.
+          </p>
+        </div>
+
+        <div
+          class="glass-panel p-8 border-l-4 border-blue-500 flex flex-col justify-center"
+        >
+          <h3 class="text-2xl font-bold text-gray-800 mb-4 font-montserrat">
+            <i class="fas fa-box-open mr-2 text-blue-500"></i>
+            Entregas Híbridas
+          </h3>
+          <ul class="space-y-3 text-gray-700 text-lg">
+            <li>
+              <i class="fas fa-check-circle text-teal-500 mr-2"></i>Binários
+              Desktop
+            </li>
+            <li>
+              <i class="fas fa-check-circle text-teal-500 mr-2"></i>Imagens
+              Docker
+            </li>
+            <li>
+              <i class="fas fa-tag text-teal-500 mr-2"></i>Tags Semânticas
+              (v1.x)
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="w-2/3 glass-panel relative bg-white/60">
+        <div
+          class="absolute top-4 left-6 text-gray-400 font-bold uppercase tracking-widest text-sm"
+        >
+          Diagrama Arquitetural
+        </div>
+
+        <svg class="line-svg">
+          <line
+            x1="50%"
+            y1="50%"
+            x2="25%"
+            y2="25%"
+            stroke="#cbd5e0"
+            stroke-width="3"
+            stroke-dasharray="8"
+          />
+          <line
+            x1="50%"
+            y1="50%"
+            x2="75%"
+            y2="25%"
+            stroke="#cbd5e0"
+            stroke-width="3"
+            stroke-dasharray="8"
+          />
+          <line
+            x1="50%"
+            y1="50%"
+            x2="50%"
+            y2="75%"
+            stroke="#cbd5e0"
+            stroke-width="3"
+            stroke-dasharray="8"
+          />
+        </svg>
+
+        <div class="repo-node mod-center">
+          <i class="fas fa-cubes text-4xl mb-2"></i>
+          <span class="text-lg">Core</span>
+        </div>
+
+        <div class="repo-node mod-front">
+          <i class="fas fa-desktop text-3xl mb-1"></i>
+          <span>Frontend</span>
+        </div>
+
+        <div class="repo-node mod-server">
+          <i class="fas fa-server text-3xl mb-1"></i>
+          <span>Server</span>
+        </div>
+
+        <div class="repo-node mod-data">
+          <i class="fas fa-database text-3xl mb-1"></i>
+          <span>Collector</span>
+        </div>
+
+        <div class="absolute bottom-6 right-8 text-right">
+          <p class="text-gray-500 font-semibold">Mintplex-Labs/anything-llm</p>
+          <p class="text-xs text-gray-400">
+            Visualização simplificada dos componentes
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      04
+    </div>
+  </body>
+</html>
