--- a/page_5.html
+++ b/page_5.html
@@ -1,124 +1,178 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Metodologia - Três Abordagens com IA</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E2 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .methodology-card {
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-        .methodology-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-        .model-icon {
-            background-color: #19747E;
-            color: white;
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 15px;
-        }
-    </style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col">
-<!-- Header -->
-<div class="mb-8">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-center text-gray-800 mb-2">Metodologia - Três Abordagens com IA</h1>
-<p class="text-xl text-center text-gray-700">Utilização de três modelos LLM do Hugging Face para auditoria de código e análise estrutural</p>
-</div>
-<!-- Methodology Cards -->
-<div class="flex-grow flex justify-between items-stretch gap-6">
-<!-- Model 1 -->
-<div class="methodology-card flex-1 p-6 flex flex-col">
-<div class="flex items-center justify-center">
-<div class="model-icon">
-<i class="fas fa-sort-amount-down text-2xl"></i>
-</div>
-</div>
-<h3 class="text-xl font-bold text-center mb-2 text-gray-800">Classificação por Texto</h3>
-<p class="text-md font-semibold mb-3 text-center text-gray-700">BAAI/bge-reranker-v2-m3</p>
-<div class="flex-grow">
-<p class="text-base mb-4">Analisou arquivos brutos (branches_overview.txt, logs)</p>
-<ul class="list-disc pl-5">
-<li class="mb-1">Leitura literal de conteúdo</li>
-<li class="mb-1">Ordenação por relevância</li>
-<li>Detecção de padrões de branch</li>
-</ul>
-</div>
-<div class="mt-4 text-sm text-gray-600 italic">
-                    Nota: Modelo 1 - Usou logits negativos para classificação
-                </div>
-</div>
-<!-- Model 2 -->
-<div class="methodology-card flex-1 p-6 flex flex-col">
-<div class="flex items-center justify-center">
-<div class="model-icon">
-<i class="fas fa-project-diagram text-2xl"></i>
-</div>
-</div>
-<h3 class="text-xl font-bold text-center mb-2 text-gray-800">Embeddings Técnicos</h3>
-<p class="text-md font-semibold mb-3 text-center text-gray-700">Qwen/Qwen3-Embedding-0.6B</p>
-<div class="flex-grow">
-<p class="text-base mb-4">Analisou a descrição estatística e estrutural do repositório</p>
-<ul class="list-disc pl-5">
-<li class="mb-1">Vetorização de documentos</li>
-<li class="mb-1">Similaridade de cosseno</li>
-<li>Comparação de estruturas</li>
-</ul>
-</div>
-<div class="mt-4 text-sm text-gray-600 italic">
-                    Nota: Modelo 2 - Usou similaridade de cosseno (0 a 1)
-                </div>
-</div>
-<!-- Model 3 -->
-<div class="methodology-card flex-1 p-6 flex flex-col">
-<div class="flex items-center justify-center">
-<div class="model-icon">
-<i class="fas fa-brain text-2xl"></i>
-</div>
-</div>
-<h3 class="text-xl font-bold text-center mb-2 text-gray-800">Zero-Shot Classification</h3>
-<p class="text-md font-semibold mb-3 text-center text-gray-700">mDeBERTa-v3-base-xnli</p>
-<div class="flex-grow">
-<p class="text-base mb-4">Analisou resumos de hipóteses e definições teóricas</p>
-<ul class="list-disc pl-5">
-<li class="mb-1">Classificação sem treinamento</li>
-<li class="mb-1">Análise semântica</li>
-<li>Probabilidade de pertencimento</li>
-</ul>
-</div>
-<div class="mt-4 text-sm text-gray-600 italic">
-                    Nota: Modelo 3 - Usou probabilidade semântica
-                </div>
-</div>
-</div>
-<!-- Footer with page number -->
-<div class="mt-8 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">5/24</div>
-</div>
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Metodologia - 3 Abordagens</title>
 
-</body></html>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        transition: transform 0.3s ease;
+      }
+
+      /* Efeito de hover suave nos cards */
+      .glass-panel:hover {
+        transform: translateY(-5px);
+        border-color: #19747e;
+      }
+
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      .icon-badge {
+        width: 50px;
+        height: 50px;
+        background: #19747e;
+        color: white;
+        border-radius: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+    </style>
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-8">
+      <h1
+        class="text-4xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+      >
+        Metodologia: 3 Abordagens com IA
+      </h1>
+      <div class="w-24 h-2 bg-teal-600 rounded-full"></div>
+      <p class="text-gray-500 mt-2 text-lg">
+        Comparação de diferentes técnicas de NLP para auditoria de software
+      </p>
+    </div>
+
+    <div class="grid grid-cols-3 gap-6 h-full pb-8">
+      <div class="glass-panel p-6 flex flex-col">
+        <div class="icon-badge">
+          <i class="fas fa-align-left"></i>
+        </div>
+        <h2 class="text-xl font-bold text-gray-800 font-montserrat mb-1">
+          Classificação por Texto
+        </h2>
+        <p class="text-teal-600 font-mono text-xs mb-4">
+          BAAI/bge-reranker-v2-m3
+        </p>
+
+        <div class="flex-grow space-y-3">
+          <div class="bg-white/50 p-3 rounded border border-gray-200">
+            <p class="text-xs font-bold text-gray-500 uppercase">Input</p>
+            <p class="text-sm text-gray-800">
+              Arquivos brutos (logs, txt, jsonl)
+            </p>
+          </div>
+          <div class="bg-white/50 p-3 rounded border border-gray-200">
+            <p class="text-xs font-bold text-gray-500 uppercase">Técnica</p>
+            <p class="text-sm text-gray-800">
+              Reranking & Similaridade Textual
+            </p>
+          </div>
+        </div>
+        <div class="mt-4 pt-4 border-t border-gray-200">
+          <p class="text-xs text-gray-500">
+            Analisa o conteúdo literal dos arquivos do repositório.
+          </p>
+        </div>
+      </div>
+
+      <div class="glass-panel p-6 flex flex-col border-t-4 border-teal-500">
+        <div class="icon-badge bg-blue-600">
+          <i class="fas fa-project-diagram"></i>
+        </div>
+        <h2 class="text-xl font-bold text-gray-800 font-montserrat mb-1">
+          Embeddings Técnicos
+        </h2>
+        <p class="text-teal-600 font-mono text-xs mb-4">
+          Qwen/Qwen3-Embedding-0.6B
+        </p>
+
+        <div class="flex-grow space-y-3">
+          <div class="bg-white/50 p-3 rounded border border-gray-200">
+            <p class="text-xs font-bold text-gray-500 uppercase">Input</p>
+            <p class="text-sm text-gray-800">
+              Estatísticas (Frequência PRs, CI)
+            </p>
+          </div>
+          <div class="bg-white/50 p-3 rounded border border-gray-200">
+            <p class="text-xs font-bold text-gray-500 uppercase">Técnica</p>
+            <p class="text-sm text-gray-800">Feature Extraction (Vetores)</p>
+          </div>
+        </div>
+        <div class="mt-4 pt-4 border-t border-gray-200">
+          <p class="text-xs text-gray-500">
+            Converte dados estruturais do projeto em vetores matemáticos.
+          </p>
+        </div>
+      </div>
+
+      <div class="glass-panel p-6 flex flex-col">
+        <div class="icon-badge bg-purple-600">
+          <i class="fas fa-brain"></i>
+        </div>
+        <h2 class="text-xl font-bold text-gray-800 font-montserrat mb-1">
+          Zero-Shot Classification
+        </h2>
+        <p class="text-teal-600 font-mono text-xs mb-4">
+          mDeBERTa-v3-base-xnli
+        </p>
+
+        <div class="flex-grow space-y-3">
+          <div class="bg-white/50 p-3 rounded border border-gray-200">
+            <p class="text-xs font-bold text-gray-500 uppercase">Input</p>
+            <p class="text-sm text-gray-800">Resumo de Hipóteses</p>
+          </div>
+          <div class="bg-white/50 p-3 rounded border border-gray-200">
+            <p class="text-xs font-bold text-gray-500 uppercase">Técnica</p>
+            <p class="text-sm text-gray-800">Inferência Lógica (NLI)</p>
+          </div>
+        </div>
+        <div class="mt-4 pt-4 border-t border-gray-200">
+          <p class="text-xs text-gray-500">
+            Classifica sem treinamento prévio, baseado em semântica.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      05
+    </div>
+  </body>
+</html>
