--- a/page_8.html
+++ b/page_8.html
@@ -1,133 +1,210 @@
-<!DOCTYPE html><html lang="pt"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Modelo 3 - Zero-Shot Classification</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-<script src="https://picture-search.skywork.ai/aippt/static/tailwindcss.com"></script><style>
-        body {width: 1280px; min-height: 720px; margin: 0;
-            padding: 0;}
-        .slide {
-            width: 1280px;
-            min-height: 720px;
-            position: relative;
-            background: linear-gradient(135deg, #D1E8E2 0%, #E8E8E8 100%);
-            color: #333333;
-        }
-        .header-line {
-            height: 4px;
-            background: linear-gradient(90deg, #19747E 0%, #D1E8E2 100%);
-        }
-        .model-card {
-            background-color: rgba(255, 255, 255, 0.8);
-            border-left: 5px solid #19747E;
-        }
-        .feature-item {
-            background-color: rgba(255, 255, 255, 0.6);
-            transition: all 0.3s ease;
-        }
-        .feature-item:hover {
-            transform: translateX(5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .icon-circle {
-            background-color: #19747E;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-<div class="slide p-10 flex flex-col">
-<!-- Header -->
-<div class="mb-8">
-<div class="header-line mb-4"></div>
-<h1 class="text-4xl font-bold text-gray-800 mb-2">Modelo 3 - Zero-Shot Classification</h1>
-<h2 class="text-2xl text-gray-700">mDeBERTa-v3-base-xnli</h2>
-</div>
-<!-- Main Content -->
-<div class="flex-grow flex">
-<!-- Left Column - Model Description -->
-<div class="w-1/2 pr-6">
-<div class="model-card p-6 rounded-lg shadow-md mb-6">
-<h3 class="text-2xl font-semibold mb-3 text-gray-800">Sobre o Modelo</h3>
-<p class="text-lg mb-4">O mDeBERTa-v3-base-xnli é um modelo de classificação zero-shot que analisou resumos de hipóteses e definições teóricas do projeto AnythingLLM.</p>
-<p class="text-lg">Diferente dos outros modelos, ele não requer treinamento específico para cada categoria, permitindo classificação direta sem exemplos rotulados.</p>
-</div>
-<div class="model-card p-6 rounded-lg shadow-md">
-<h3 class="text-2xl font-semibold mb-3 text-gray-800">Aplicações no Projeto</h3>
-<p class="text-lg mb-2">• Análise de estratégias de branching e release</p>
-<p class="text-lg mb-2">• Classificação semântica de conceitos teóricos</p>
-<p class="text-lg">• Identificação de padrões de desenvolvimento</p>
-</div>
-</div>
-<!-- Right Column - Features and Visualization -->
-<div class="w-1/2 pl-6">
-<h3 class="text-2xl font-semibold mb-4 text-gray-800">Características Principais</h3>
-<!-- Feature Items -->
-<div class="space-y-4 mb-6">
-<div class="feature-item p-4 rounded-lg flex items-center">
-<div class="icon-circle mr-4">
-<i class="fas fa-brain text-xl"></i>
-</div>
-<div>
-<h4 class="text-xl font-semibold">Classificação Semântica</h4>
-<p>Capacidade de entender relações de hipótese e definição</p>
-</div>
-</div>
-<div class="feature-item p-4 rounded-lg flex items-center">
-<div class="icon-circle mr-4">
-<i class="fas fa-project-diagram text-xl"></i>
-</div>
-<div>
-<h4 class="text-xl font-semibold">Zero-Shot Learning</h4>
-<p>Classificação direta sem necessidade de exemplos rotulados</p>
-</div>
-</div>
-<div class="feature-item p-4 rounded-lg flex items-center">
-<div class="icon-circle mr-4">
-<i class="fas fa-chart-line text-xl"></i>
-</div>
-<div>
-<h4 class="text-xl font-semibold">Probabilidade Semântica</h4>
-<p>Retorna valores de probabilidade para cada classificação</p>
-</div>
-</div>
-</div>
-<!-- Zero-shot Concept Visualization -->
-<div class="bg-white bg-opacity-70 p-4 rounded-lg shadow-sm">
-<div class="flex justify-center items-center space-x-4">
-<div class="text-center">
-<i class="fas fa-file-alt text-4xl text-gray-600"></i>
-<p class="mt-2">Hipóteses</p>
-</div>
-<div class="text-center">
-<i class="fas fa-arrow-right text-2xl text-gray-500"></i>
-</div>
-<div class="text-center">
-<i class="fas fa-cogs text-4xl text-gray-600"></i>
-<p class="mt-2">mDeBERTa</p>
-</div>
-<div class="text-center">
-<i class="fas fa-arrow-right text-2xl text-gray-500"></i>
-</div>
-<div class="text-center">
-<i class="fas fa-tags text-4xl text-gray-600"></i>
-<p class="mt-2">Classificações</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Footer with page number -->
-<div class="mt-6 flex justify-between items-center">
-<div class="text-sm text-gray-600">Análise de Estratégias de Branching e Release</div>
-<div class="text-sm text-gray-600" style="visibility: hidden;">8/24</div>
-</div>
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Modelo 3 - Zero-Shot Classification</title>
 
-</body></html>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        width: 1280px;
+        height: 720px;
+        overflow: hidden;
+        background: linear-gradient(135deg, #e0f2f1 0%, #eceff1 100%);
+        font-family: "Open Sans", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(12px);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(31, 38, 135, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .title-gradient {
+        background: linear-gradient(90deg, #19747e, #26a69a);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      /* Estilos do Diagrama de Inferência (Direita) */
+      .inference-card {
+        background: white;
+        border-radius: 12px;
+        padding: 15px;
+        margin-bottom: 15px;
+        border-left: 5px solid #ccc;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+        transition: transform 0.2s;
+      }
+
+      .inference-card:hover {
+        transform: translateX(5px);
+      }
+
+      .card-match {
+        border-left-color: #19747e;
+      } /* Match (Verde) */
+      .card-conflict {
+        border-left-color: #ef4444;
+      } /* Conflict (Vermelho) */
+
+      .score-pill {
+        font-size: 0.8rem;
+        font-weight: bold;
+        padding: 2px 8px;
+        border-radius: 4px;
+        float: right;
+      }
+      .pill-high {
+        background: #e6fffa;
+        color: #19747e;
+      }
+      .pill-low {
+        background: #fef2f2;
+        color: #ef4444;
+      }
+
+      .arrow-down {
+        text-align: center;
+        color: #cbd5e1;
+        font-size: 1.2rem;
+        margin: -10px 0 5px 0;
+      }
+    </style>
+  </head>
+  <body class="p-10 flex flex-col relative">
+    <div class="mb-6">
+      <h1
+        class="text-4xl font-extrabold font-montserrat title-gradient mb-2 py-2 leading-tight"
+      >
+        Modelo 3: Zero-Shot Classification
+      </h1>
+      <div class="flex items-center gap-4">
+        <div class="w-24 h-2 bg-teal-600 rounded-full"></div>
+        <span
+          class="text-sm font-semibold text-gray-500 bg-white px-2 py-1 rounded shadow-sm"
+        >
+          mDeBERTa-v3-base-xnli
+        </span>
+      </div>
+    </div>
+
+    <div class="flex gap-8 h-full pb-8">
+      <div class="w-1/3 flex flex-col gap-6">
+        <div
+          class="glass-panel p-8 justify-center border-l-4 border-purple-500"
+        >
+          <div class="mb-6 text-center">
+            <div
+              class="w-20 h-20 bg-purple-100 rounded-full flex items-center justify-center mx-auto mb-4 text-purple-600"
+            >
+              <i class="fas fa-brain text-4xl"></i>
+            </div>
+            <h2 class="text-2xl font-bold text-gray-800 font-montserrat">
+              Lógica NLI
+            </h2>
+            <p class="text-purple-600 font-semibold text-sm">
+              Natural Language Inference
+            </p>
+          </div>
+
+          <p class="text-gray-700 leading-relaxed text-justify mb-4">
+            Diferente dos outros, este modelo não "lê" apenas palavras-chave.
+            Ele avalia se uma <strong>Premissa</strong> (dados do repositório)
+            confirma ou contradiz uma <strong>Hipótese</strong> (definição
+            teórica).
+          </p>
+
+          <div class="bg-purple-50 p-4 rounded-lg border border-purple-100">
+            <p class="text-xs font-bold text-purple-800 uppercase mb-1">
+              Vantagem:
+            </p>
+            <p class="text-sm text-gray-700">
+              Não requer treinamento prévio com exemplos de código (Zero-Shot).
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-2/3 glass-panel p-8 relative bg-gray-50/50">
+        <h3
+          class="absolute top-6 left-6 text-gray-400 font-bold uppercase text-xs tracking-widest"
+        >
+          Simulação do Processo de Inferência
+        </h3>
+
+        <div class="mt-8 flex flex-col justify-center h-full max-w-2xl mx-auto">
+          <div
+            class="bg-gray-800 text-white p-4 rounded-lg mb-6 shadow-lg text-center"
+          >
+            <p class="text-xs text-gray-400 uppercase font-bold mb-1">
+              Evidência (Premissa)
+            </p>
+            <p class="font-mono text-sm">
+              "O projeto não possui branch develop e integra PRs direto na
+              master."
+            </p>
+          </div>
+
+          <div class="inference-card card-conflict">
+            <div class="flex justify-between items-center mb-1">
+              <span class="text-xs font-bold text-red-500 uppercase"
+                >Hipótese 1: Gitflow</span
+              >
+              <span class="score-pill pill-low">Score: 0.15</span>
+            </div>
+            <p class="text-sm text-gray-600 italic">
+              "Gitflow exige branches develop e release..."
+            </p>
+            <div class="mt-2 text-xs text-red-600 font-bold">
+              <i class="fas fa-times-circle mr-1"></i> Contradição Detectada
+            </div>
+          </div>
+
+          <div class="arrow-down"><i class="fas fa-arrow-down"></i></div>
+
+          <div class="inference-card card-match">
+            <div class="flex justify-between items-center mb-1">
+              <span class="text-xs font-bold text-teal-600 uppercase"
+                >Hipótese 2: GitHub Flow</span
+              >
+              <span class="score-pill pill-high">Score: 0.53</span>
+            </div>
+            <p class="text-sm text-gray-600 italic">
+              "GitHub Flow usa feature branches e merge na master..."
+            </p>
+            <div class="mt-2 text-xs text-teal-700 font-bold">
+              <i class="fas fa-check-circle mr-1"></i> Implicação Confirmada
+              (Entailment)
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="absolute bottom-6 right-10 text-gray-400 font-bold text-xl opacity-60"
+    >
+      08
+    </div>
+  </body>
+</html>
